fixing the position on small screens

--- a/Sudoku.css
+++ b/Sudoku.css
@@ -65,9 +65,6 @@ hr {
     border-right: 1px solid #212529;
 }
 @media (max-width: 768px) {
-    .content{
-        margin-top: 10rem;
-    }
     hr {
         width: 350px;
     }
